--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 		<head>
 			<title>{{ page.title }}</title>
 			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="https://ouyangjunaoyun.github.io/mywebsite/css/main.css">
+			<link rel="stylesheet" type="text/css" href="https://ouyangjunaoyun.github.io/css/main.css">
 		</head>
 		<body>
 			<nav>
@@ -22,7 +22,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:jun.ouyang@mail.utoronto.ca">email</a></li>
-	        		<li><a href="https://ouyangjunaoyun.github.io/mywebsite/">ouyangjunaoyun.github.io/mywebsite/</a></li>
+	        		<li><a href="https://ouyangjunaoyun.github.io/">ouyangjunaoyun.github.io/</a></li>
 				</ul>
 			</footer>
 		</body>
