--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,8 @@
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
 	        		<li><a href="https://ouyangjunaoyun.github.io/CV/Jun Ouyang_CV.pdf">CV</a></li>
-	        		<li><a href="/blog">Academic experience</a></li>
+	        		<li><a href="/blog">Blog</a></li>
+				<li><a href="/academic">Academic Experience</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
