--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 		        	<li><a href="/about">About</a></li>
 	        		<li><a href="https://ouyangjunaoyun.github.io/CV/Jun Ouyang_CV.pdf">CV</a></li>
 	        		<li><a href="/blog">Blog</a></li>
-				<li><a href="/academic">Academic Experience</a></li>
+				<li><a href="/academic">Research</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
