--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
 	        		<li><a href="https://ouyangjunaoyun.github.io/CV/Jun Ouyang_CV.pdf">CV</a></li>
 	        		<li><a href="/blog">Blog</a></li>
 				<li><a href="/academic">Research</a></li>
+				<li><a href="/drive">Drive</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
